@@ -6,9 +6,11 @@ AM_CXXFLAGS=$(KEA_CXXFLAGS)
 lib_LTLIBRARIES = libkea-exceptions.la
 
 libkea_exceptions_la_SOURCES = exceptions.h exceptions.cc
+libkea_exceptions_la_SOURCES += isc_assert.h
 libkea_exceptions_la_LDFLAGS = -no-undefined -version-info 0:1:0
 
 CLEANFILES = *.gcno *.gcda
 
 libkea_exceptions_includedir = $(pkgincludedir)/exceptions
 libkea_exceptions_include_HEADERS = exceptions.h
+libkea_exceptions_include_HEADERS += isc_assert.h
