@@ -1,3 +1,9 @@
+1431.   [security]     tmark
+	Prevent DHCP servers from asserting when malformed hostname
+	or FQDN options are received.
+	CVE:2019-6473
+	(Gitlab #730,!8-p git TBD)
+
 1430.    [security]       tmark
 	Added logic to kea-dhcp6 to catch values for client or
 	server DUIDs that exceed 128 bytes to inbound packet
